fixed it some endpoint and added news endpoint on alfred contrller
